--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,4 +1,5 @@
  <div class="user-details">
-  <h1> My Projects ----------- here go icons </h1>
+  <h1> My Projects </h1>
+  <!-- TODO: include icons here -->
   <p> {{site.user_description}} </p>
 </div>
