--- a/assets/_sass/_about.scss
+++ b/assets/_sass/_about.scss
@@ -1,14 +1,14 @@
 #about {
   width: 90%;
   margin: 0 auto;
-  max-width: 960px;
+  max-width: $container-width;
   @media only screen and (min-width: $cut) {
     width: 80%;
   }
 }
 
 .tech {
-  margin: 10px;
+  margin: 0 10px;
 }
 
 .user {
