--- a/assets/_sass/_projects.scss
+++ b/assets/_sass/_projects.scss
@@ -3,7 +3,7 @@
   flex-direction: column;
   justify-content: space-between;
   width: 90%;
-  max-width: 960px;
+  max-width: $container-width;
   margin: 0 auto;
   @media only screen and (min-width: $cut) {
     width: 80%;
@@ -11,7 +11,7 @@
 }
 
 .user-projects {
-  margin: 20px auto;
+  margin: 10px auto;
   img {
     max-width: 100%;
     height: auto;
@@ -21,7 +21,7 @@
     margin: 0;
   }
   li {
-    color: $main;
+    color: $text-color;
     font-size: 1.1rem;
   }
   p {
@@ -70,7 +70,7 @@
 .project-link {
   display: inline-block;
   margin: 10px 0px;
-  padding: 5px;
+  padding: 5px 15px;
   color: $main;
   background-color: transparent;
   border: 1px solid $main;
@@ -79,20 +79,20 @@
   outline: none;
   text-decoration: none;
   cursor: pointer;
-  transition: color 0.3s ease-out,
-              background-color 0.3s ease-out,
-              border-color 0.3s ease-out;
+  transition: color 0.1s ease-out,
+              background-color 0.1s ease-out,
+              border-color 0.1s ease-out;
   &:hover {
-    background-color: $purple;
-    border-color: $purple;
+    background-color: $green;
+    border-color: $green;
     color: #fff;
-    transition: color 0.3s ease-in,
-                background-color 0.3s ease-in,
-                border-color 0.3s ease-in;
+    transition: color 0.1s ease-in,
+                background-color 0.1s ease-in,
+                border-color 0.1s ease-in;
   }
   &:active {
-    background-color: $purple;
-    border-color: $purple;
+    background-color: $green;
+    border-color: $green;
     color: #fff;
     transition: color 0.3s ease-in,
                 background-color 0.3s ease-in,
