New layout for small projects

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,9 +5,11 @@
       <!-- {% include header.html %} -->
       <section id="about">
         {% include about.html %}
+        <!-- {% include packages.html %} -->
+        <!-- {% include git-repos.html %} -->
       </section>
-      <section id="about">
-        {% include packages.html %}
+      <section id="small-projects">
+        {% include projects-small.html %}
       </section>
       <section id="projects">
         {% include projects.html %}
