--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -1,28 +1,24 @@
 <div class="user-details">
-  <h2>Featured Projects</h2>
+  <h2>Other Projects</h2>
 </div>
+
 <div class="user-projects">
   <div class="images-right">
     <img alt="mountains" src="{{ "/assets/img/mountains.jpg" | prepend: site.baseurl }}" />
   </div>
   <div class="contents">
-    <h3> Project Title </h3>
-    <ul>
-      <li> Featured Skills</li>
-    </ul>
+    <h3> The Alf Way to LaTeX </h3>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
     <a class="project-link" href="#">Check it out</a>
   </div>
 </div>
+
 <div class="user-projects">
   <div class="images-left">
     <img alt="mountains" src="{{ "/assets/img/skate.jpg" | prepend: site.baseurl }}" />
   </div>
   <div class="contents-right">
     <h3> Project Title </h3>
-    <ul>
-      <li> Featured Skills</li>
-    </ul>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
     <a class="project-link" href="#">Check it out</a>
   </div>
