--- a/assets/_sass/_about.scss
+++ b/assets/_sass/_about.scss
@@ -9,6 +9,9 @@
 
 .tech {
   margin: 0 10px;
+  @media only screen and (min-width: $cut) {
+    max-width: 33%;
+  }
 }
 
 .user {
@@ -22,6 +25,8 @@
     font-size: 16px;
   }
   @media only screen and (min-width: $cut) {
+    margin-left: auto;
+    margin-right: auto;
     flex-wrap: nowrap;
     font-size: 75px;
   }
