--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,5 +1,5 @@
  <div class="user-details">
-  <h1> My Projects </h1>
+  <h1> {{site.title}} </h1>
   <!-- TODO: include icons here -->
   <p> {{site.user_description}} </p>
 </div>
