--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -4,22 +4,11 @@
 
 <div class="user-projects">
   <div class="images-right">
-    <img alt="mountains" src="{{ "/assets/img/mountains.jpg" | prepend: site.baseurl }}" />
+    <img alt="mountains" src="{{ "/assets/img/alf-way-cover.jpg" | prepend: site.baseurl }}" />
   </div>
   <div class="contents">
     <h3> The Alf Way to LaTeX </h3>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-    <a class="project-link" href="#">Check it out</a>
-  </div>
-</div>
-
-<div class="user-projects">
-  <div class="images-left">
-    <img alt="mountains" src="{{ "/assets/img/skate.jpg" | prepend: site.baseurl }}" />
-  </div>
-  <div class="contents-right">
-    <h3> Project Title </h3>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-    <a class="project-link" href="#">Check it out</a>
+    <p>A while ago I decided to write my own book about LaTeX. My approach is not academic or technical, just a (I think) simple introduction to LaTeX, what it offers, and how you can use it in clever ways to ease your work (specially in Mathematics and Physics). Some of the best tips and black magic I use daily comes straight from <a href="https://tex.stackexchange.com/">TeX - LaTeX Stack Exchange</a> (special mentions to the amazing <a href="https://tex.stackexchange.com/users/4427/egreg">Enrico Gregorio</a>).</p>
+    <a class="project-link" href="https://aldomann.gitlab.io/the-way-to-latex/">Check it out</a>
   </div>
 </div>
