--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,14 +2,12 @@
 <html lang="en">
   {% include head.html %}
   <body>
-      <!-- {% include header.html %} -->
       <section id="about">
         {% include about.html %}
-        <!-- {% include packages.html %} -->
-        <!-- {% include git-repos.html %} -->
       </section>
       <section id="small-projects">
-        {% include projects-small.html %}
+        {% include r-packages.html %}
+        {% include git-repos.html %}
       </section>
       <section id="projects">
         {% include projects.html %}
