--- a/assets/_sass/_projects.scss
+++ b/assets/_sass/_projects.scss
@@ -99,3 +99,37 @@
                 border-color 0.3s ease-in;
   }
 }
+
+
+.extra-link {
+  display: inline-block;
+  margin: 10px 10px;
+  padding: 5px 15px;
+  color: $black;
+  background-color: transparent;
+  border: 1px solid $black;
+  border-radius: 3px;
+  text-align: center;
+  outline: none;
+  text-decoration: none;
+  cursor: pointer;
+  transition: color 0.1s ease-out,
+              background-color 0.1s ease-out,
+              border-color 0.1s ease-out;
+  &:hover {
+    background-color: $black;
+    border-color: $black;
+    color: #fff;
+    transition: color 0.1s ease-in,
+                background-color 0.1s ease-in,
+                border-color 0.1s ease-in;
+  }
+  &:active {
+    background-color: $black;
+    border-color: $black;
+    color: #fff;
+    transition: color 0.3s ease-in,
+                background-color 0.3s ease-in,
+                border-color 0.3s ease-in;
+  }
+}
