Made new include for big projects. Fixed bug in button border when hovering.

--- a/_includes/git-repos.html
+++ b/_includes/git-repos.html
@@ -4,46 +4,46 @@
 
 <div class="small-projects-container">
   {% include small-project.html
-    title="mockups"
-    image="mockups.png"
-    link="https://gitlab.com/aldomann/mockups"
-    description="Application mockups. Mainly redesigns of popular apps following GNOME's Human Interface Guidelines."
+    title =   "mockups"
+    image =   "mockups.png"
+    link =    "https://gitlab.com/aldomann/mockups"
+    content = "Application mockups. Mainly redesigns of popular apps following GNOME's Human Interface Guidelines."
   %}
 
   {% include small-project.html
-    title="apps-scripts"
-    image="apps-scripts.png"
-    link="https://gitlab.com/aldomann/apps-scripts"
-    description="Post-installation scripts for GNU/Linux systems."
+    title =   "apps-scripts"
+    image =   "apps-scripts.png"
+    link =    "https://gitlab.com/aldomann/apps-scripts"
+    content = "Post-installation scripts for GNU/Linux systems."
   %}
 
   {% include small-project.html
-    title="latex-templates"
-    image="latex-templates.png"
-    link="https://gitlab.com/aldomann/latex-templates"
-    description="LaTeX templates and style files for common documents."
+    title =   "latex-templates"
+    image =   "latex-templates.png"
+    link =    "https://gitlab.com/aldomann/latex-templates"
+    content = "LaTeX templates and style files for common documents."
   %}
 
 </div>
 
 <div class="small-projects-container">
   {% include small-project.html
-    title="gbcat-keyboard"
-    image="gbcat-keyboard.png"
-    link="https://gitlab.com/aldomann/gbcat-keyboard"
-    description="Custom X KeyBoard layout for English (UK) + Catalan."
+    title =   "gbcat-keyboard"
+    image =   "gbcat-keyboard.png"
+    link =    "https://gitlab.com/aldomann/gbcat-keyboard"
+    content = "Custom X KeyBoard layout for English (UK) + Catalan."
   %}
 
   {% include small-project.html
-    title="uscat-keyboard"
-    image="uscat-keyboard.png"
-    link="https://gitlab.com/aldomann/uscat-keyboard"
-    description="Custom X KeyBoard layout for English (US) + Catalan."
+    title =   "uscat-keyboard"
+    image =   "uscat-keyboard.png"
+    link =    "https://gitlab.com/aldomann/uscat-keyboard"
+    content = "Custom X KeyBoard layout for English (US) + Catalan."
   %}
 </div>
 
 <div class="user-details">
-  <a class="extra-link" href="https://gitlab.com/aldomann/projects">GitLab Repos</a>
+  <a class="extra-link" href="https://gitlab.com/users/aldomann/projects">GitLab Repos</a>
   <a class="extra-link" href="https://github.com/aldomann?tab=repositories">GitHub Repos</a>
 </div>
 
