--- a/_includes/r-packages.html
+++ b/_includes/r-packages.html
@@ -4,17 +4,17 @@
 
 <div class="small-projects-container">
   {% include small-project.html
-    title="hurdat-hadisst-data"
-    image="hurdat-hadisst-data.png"
-    link="https://gitlab.com/aldomann/hurdat-hadisst-data"
-    description="Unified data sets that summarises the relevant variables (for my Master's Thesis) of each analysed tropical-cyclone using data from the HURDAT2 and the HadISST1."
+    title =   "hurdat-hadisst-data"
+    image =   "hurdat-hadisst-data.png"
+    link =    "https://gitlab.com/aldomann/hurdat-hadisst-data"
+    content = "Unified data sets that summarises the relevant variables (for my Master's Thesis) of each analysed tropical-cyclone using data from the HURDAT2 and the HadISST1."
   %}
 
   {% include small-project.html
-    title="alfR"
-    image="alfR.png"
-    link="https://gitlab.com/aldomann/alfR"
-    description="R package with useful miscellaneous functions."
+    title =   "alfR"
+    image=    "alfR.png"
+    link =    "https://gitlab.com/aldomann/alfR"
+    content = "R package with useful miscellaneous functions."
   %}
 </div>
 
