--- a/_includes/small-project.html
+++ b/_includes/small-project.html
@@ -6,5 +6,5 @@
     <h4> {{ include.title }} </h4>
     <a class="small-project-link" href="{{ include.link }}">Check it out</a>
   </div>
-  <p>{{ include.description }}</p>
+  <p>{{ include.content }}</p>
 </div>
