--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -2,13 +2,11 @@
   <h2>Other Projects</h2>
 </div>
 
-<div class="user-projects">
-  <div class="images-right">
-    <img alt="mountains" src="{{ "/assets/img/alf-way-cover.jpg" | prepend: site.baseurl }}" />
-  </div>
-  <div class="contents">
-    <h3> The Alf Way to LaTeX </h3>
-    <p>A while ago I decided to write my own book about LaTeX. My approach is not academic or technical, just a (I think) simple introduction to LaTeX, what it offers, and how you can use it in clever ways to ease your work (specially in Mathematics and Physics). Some of the best tips and black magic I use daily comes straight from <a href="https://tex.stackexchange.com/">TeX - LaTeX Stack Exchange</a> (special mentions to the amazing <a href="https://tex.stackexchange.com/users/4427/egreg">Enrico Gregorio</a>).</p>
-    <a class="project-link" href="https://aldomann.gitlab.io/the-way-to-latex/">Check it out</a>
-  </div>
-</div>
+
+{% include big-project.html
+  layout =  "right"
+  title =   "The Alf Way to LaTeX"
+  image =   "alf-way-cover.jpg"
+  link =    "https://aldomann.gitlab.io/the-way-to-latex/"
+  content = "A while ago I decided to write my own book about LaTeX. My approach is not academic or technical, just a (I think) simple introduction to LaTeX, what it offers, and how you can use it in clever ways to ease your work (specially in Mathematics and Physics). Some of the best tips and black magic I use daily comes straight from <a href='https://tex.stackexchange.com/'>TeX - LaTeX Stack Exchange</a> (special mentions to the amazing <a href='https://tex.stackexchange.com/users/4427/egreg'>Enrico Gregorio</a>)."
+%}
