--- a/assets/_sass/_projects.scss
+++ b/assets/_sass/_projects.scss
@@ -83,6 +83,7 @@
               background-color 0.1s ease-out,
               border-color 0.1s ease-out;
   &:hover {
+    border: 1px solid $main;
     background-color: $green;
     border-color: $green;
     color: #fff;
@@ -94,12 +95,11 @@
     background-color: $green;
     border-color: $green;
     color: #fff;
-    transition: color 0.3s ease-in,
-                background-color 0.3s ease-in,
-                border-color 0.3s ease-in;
+    transition: color 0.1s ease-in,
+                background-color 0.1s ease-in,
+                border-color 0.1s ease-in;
   }
 }
-
 
 .extra-link {
   display: inline-block;
@@ -117,6 +117,7 @@
               background-color 0.1s ease-out,
               border-color 0.1s ease-out;
   &:hover {
+    border: 1px solid $black;
     background-color: $black;
     border-color: $black;
     color: #fff;
@@ -128,8 +129,8 @@
     background-color: $black;
     border-color: $black;
     color: #fff;
-    transition: color 0.3s ease-in,
-                background-color 0.3s ease-in,
-                border-color 0.3s ease-in;
+    transition: color 0.1s ease-in,
+                background-color 0.1s ease-in,
+                border-color 0.1s ease-in;
   }
 }
