New hexagon stickers for R packages

--- a/_includes/r-packages.html
+++ b/_includes/r-packages.html
@@ -5,17 +5,18 @@
 <div class="small-projects-container">
   {% include small-project.html
     title =   "hurdat-hadisst-data"
-    image =   "hurdat-hadisst-data.png"
+    image =   "hurdat-hadisst-data-hexagon.png"
     link =    "https://gitlab.com/aldomann/hurdat-hadisst-data"
     content = "Unified data sets that summarises the relevant variables (for my Master's Thesis) of each analysed tropical-cyclone using data from the HURDAT2 and the HadISST1."
   %}
 
   {% include small-project.html
     title =   "alfR"
-    image=    "alfR.png"
+    image=    "alfR-hexagon.png"
     link =    "https://gitlab.com/aldomann/alfR"
     content = "R package with useful miscellaneous functions."
   %}
+
 </div>
 
 
