--- a/assets/_sass/_base.scss
+++ b/assets/_sass/_base.scss
@@ -1,5 +1,9 @@
+// Fonts
+
 @import url('https://fonts.googleapis.com/css?family=Quattrocento+Sans:400,300,800,700');
 @import url('https://fonts.googleapis.com/css?family=Noto+Sans:400,400i');
+
+// Base
 
 body {
     @include sans;
