Imported header from main website

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,6 +2,9 @@
 <html lang="en">
   {% include head.html %}
   <body>
+      <header class="page-header">
+        {% include header.html %}
+      </header>
       <section id="about">
         {% include about.html %}
       </section>
