--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,5 +9,9 @@
 	<link rel="icon" type="image/x-icon" href="/favicon.png" />
 	<link rel="icon" sizes="192x192" href="favicon-highres.png">
 
-	<link rel="stylesheet" href="{{ "/assets/css/main.css" | prepend: site.baseurl }}">
+	<!-- Font Awesome -->
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
+
+	<!-- Load CSS file -->
+	<link rel="stylesheet" href="{{ '/assets/css/main.css' | prepend: site.baseurl | replace: 'http://', 'https://' }}">
 </head>
