--- a/assets/_sass/_base.scss
+++ b/assets/_sass/_base.scss
@@ -1,8 +1,3 @@
-// Fonts
-
-@import url('https://fonts.googleapis.com/css?family=Quattrocento+Sans:400,300,800,700');
-@import url('https://fonts.googleapis.com/css?family=Noto+Sans:400,400i');
-
 // Base
 
 body {
@@ -54,8 +49,7 @@ sup, sub {
 
 a {
     color: $black;
-    text-decoration: none;
-    border-bottom: 1px solid;
+    text-decoration: underline;
 
     &:hover {
         border-bottom: none;
