--- a/assets/_sass/_header.scss
+++ b/assets/_sass/_header.scss
@@ -1,107 +1,85 @@
-.header {
-  z-index: 1;
-  text-align: center;
-  color:#FFF;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  margin: 0 auto;
-  -webkit-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
-  .site-title {
-    font-size: 50px;
-    display: block;
-    line-height: 1;
-    color: #FFF;
-    @media only screen and (min-width:$cut){
-      margin: 0;
-      font-size: 100px;
-    }
-  }
-  .site-description {
-    font-size: 20px;
-    display: block;
-    line-height: 1;
-    color: #FFF;
-    margin-top: 10px;
-    @media only screen and (min-width:$cut){
-      font-size: 40px;
-    }
-  }
-}
+// Page header styles
 
-.header-links {
-  margin: 10px;
-  .link {
-    color: #FFF;
-    text-decoration: none;
-    font-size: 15px;
-    margin: 10px;
-    @media only screen and (min-width:$cut){
-      font-size: 20px;
-    }
-  }
-}
+.page-header { padding: 1.5rem 0;
 
-.header-icons {
-  display: flex;
-  justify-content: center;
-  text-align: center;
-  .icon {
-    text-align: center;
-    color: #FFF;
-    width: 20px;
-    height: 20px;
-    font-size: 20px;
-    padding: 10px;
-    margin: 5px;
-    border-radius: 50%;
-    border: 2px solid #FFF;
-    transition: all .7s;
-    &:hover {
-      color: $main;
-      background: #FFF;
-    }
-    &:active {
-      color: $main;
-      background: #FFF;
-    }
-    @media only screen and (min-width:$cut) {
-      width: 35px;
-      height: 35px;
-      font-size: 35px;
-    }
-  }
-}
+	max-width: $container-width;
+	margin: 0 auto;
 
-.down {
-  color: #FFF;
-  position: absolute;
-  bottom: 25px;
-  width: 100%;
-  margin: 0 auto;
-  display: block;
-  text-align: center;
-  font-size: 30px;
-  cursor: pointer;
-  .icon {
-      position: absolute;
-      -webkit-transform-style: preserve-3d;
-      transform-style: preserve-3d;
-      top: 50%;
-      left: 50%;
-      -webkit-transform: translate(-50%, -50%);
-      transform: translate(-50%, -50%);
-      width: 100px;
-      height: 100px;
-      fill: #fff;
-      -webkit-animation: pulse 1.3s infinite;
-      animation: pulse 1.3s infinite;
-      &:hover {
-        color: $sec;
-      }
-      &:active {
-        color: $sec;
-      }
-  }
+	.a {
+		text-decoration: none;
+		border-bottom: 0 solid;
+	}
+
+	.avatar {
+		width: 100px;
+		max-width: 100%;
+		overflow: hidden;
+		@include border-radius(100px);
+		margin: 0 auto;
+		display: block;
+	}
+
+	.header-name {
+		@include title-sans;
+		font-size: 3rem;
+		font-weight: 900;
+		text-align: center;
+		letter-spacing: -.15rem;
+		line-height: 1;
+		margin: 1rem 0 2rem;
+	}
+
+	.title-bar {
+		@include section_border;
+		padding: .4rem 0;
+		@include clearfix;
+
+		.header-title {
+			color: $text-color;
+			@include title-sans;
+			font-weight: 700;
+			font-size: 1.75rem;
+			line-height: 2rem;
+			letter-spacing: -.05rem;
+			text-align: center;
+			margin: 0 0 .5rem;
+
+			@include media_larger_than_mobile {
+				float: left;
+				margin: 0;
+				margin-right: 10px;
+			}
+		}
+
+		.header-subtitle {
+			color: $text-color;
+			@include title-sans;
+			font-weight: 300;
+			font-size: 1.75rem;
+			line-height: 2rem;
+			letter-spacing: -.05rem;
+			text-align: center;
+			margin: 0 0 .5rem;
+
+			@include media_larger_than_mobile {
+				float: left;
+				margin: 0;
+			}
+		}
+	}
+
+	.executive-summary {
+		@include media_larger_than_mobile { font-size: 1.125rem; }
+		color: $text-color;
+
+		p {
+			font-size: 16px;
+		}
+
+		a {
+			font-weight: 700;
+			color: $blacker;
+		}
+	}
+
 }
