--- a/assets/_sass/_projects-small.scss
+++ b/assets/_sass/_projects-small.scss
@@ -33,6 +33,8 @@
   p {
     font-size: 0.9em;
     margin-right: 5px;
+    float: left;
+    width: 100%;
 
     @media only screen and (min-width: $cut) {
       float: left;
@@ -47,6 +49,9 @@
 }
 
 .small-contents {
+  float: right;
+  margin-top: -5%;
+  width: 65%;
   @media only screen and (min-width: $cut) {
     float: right;
     margin-top: -5%;
@@ -55,6 +60,8 @@
 }
 
 .small-images {
+  float: left;
+  width: 25%;
   @media only screen and (min-width: $cut) {
     float: left;
     width: 25%;
@@ -63,7 +70,8 @@
     margin-left: auto;
     margin-right: auto;
     display: block;
-    width: 30%;
+    float: left;
+    width: 100%;
     max-width: 100px;
     @media only screen and (min-width: $cut) {
       float: left;
@@ -75,7 +83,6 @@
 .small-project-link {
   font-size: 0.8em;
   display: inline-block;
-  // margin: 10px 0px;
   padding: 5px 15px;
   color: $main;
   background-color: transparent;
