--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1,9 +1,7 @@
 ---
 ---
 
-@import "lib/normalize";
-@import "lib/fontawesome";
-@import "lib/devicon";
+@import "normalize";
 @import "fonts";
 
 @import "mixins";
