--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,6 +15,9 @@
       <section id="projects">
         {% include projects.html %}
       </section>
-        {{ content }}
+      <section id="small-projects">
+        {% include random-stuff.html %}
+      </section>
+      {{ content }}
       {% include footer.html %}
   </body>
