Added Design Projects section

--- a/_includes/git-repos.html
+++ b/_includes/git-repos.html
@@ -1,14 +1,8 @@
 <div class="user-details">
-  <h2>Git Repositories</h2>
+  <h2>Miscellaneous Projects</h2>
 </div>
 
 <div class="small-projects-container">
-  {% include small-project.html
-    title =   "mockups"
-    image =   "mockups.png"
-    link =    "https://gitlab.com/aldomann/mockups"
-    content = "Application mockups. Mainly redesigns of popular apps following GNOME's Human Interface Guidelines."
-  %}
 
   {% include small-project.html
     title =   "apps-scripts"
@@ -24,6 +18,12 @@
     content = "LaTeX templates and style files for common documents."
   %}
 
+  {% include small-project.html
+    title =   "telegram-systray-icons"
+    image =   "telegram-systray-icons.png"
+    link =    "https://gitlab.com/aldomann/telegram-systray-icons"
+    content = "Custom systray icons for Telegram on GNOME Shell."
+  %}
 </div>
 
 <div class="small-projects-container">
@@ -46,4 +46,56 @@
   <a class="extra-link" href="https://gitlab.com/users/aldomann/projects">GitLab Repos</a>
   <a class="extra-link" href="https://github.com/aldomann?tab=repositories">GitHub Repos</a>
 </div>
+
+<div class="user-details">
+  <h2>Design Projects</h2>
+</div>
+
+<div class="small-projects-container">
+  {% include small-project.html
+    title =   "mockups"
+    image =   "mockups.png"
+    link =    "https://gitlab.com/aldomann/mockups"
+    content = "Application mockups. Mainly redesigns of popular apps following GNOME's Human Interface Guidelines."
+  %}
+
+  {% include small-project.html
+    title =   "moka-extra-icons"
+    image =   "moka-extra-icons.png"
+    link =    "https://gitlab.com/aldomann/moka-extra-icons"
+    content = "Custom icons for Moka Icon Theme by <a href='https://snwh.org/'>Sam Hewitt</a>."
+  %}
+
+  {% include small-project.html
+    title =   "paper-extra-icons"
+    image =   "paper-extra-icons.png"
+    link =    "https://gitlab.com/aldomann/paper-extra-icons"
+    content = "Custom icons for Paper Icon Theme by <a href='https://snwh.org/'>Sam Hewitt</a>."
+  %}
+</div>
+
+<div class="small-projects-container">
+  {% include small-project.html
+    title =   "faba-extra-icons"
+    image =   "faba-extra-icons.png"
+    link =    "https://gitlab.com/aldomann/faba-extra-icons"
+    content = "Custom icons for Faba Icon Theme by <a href='https://snwh.org/'>Sam Hewitt</a>."
+  %}
+
+  {% include small-project.html
+    title =   "faience-extra-icons"
+    image =   "faience-extra-icons.png"
+    link =    "https://gitlab.com/aldomann/faience-extra-icons"
+    content = "Custom icons for Faience/Faenza Icon Theme by <a href='http://tiheum.deviantart.com/'>Matthieu James</a>. No longer maintained."
+  %}
+
+  {% include small-project.html
+    title =   "sublime-moka"
+    image =   "sublime-moka.png"
+    link =    "https://gitlab.com/aldomann/sublime-moka"
+    content = "Moka theme for Sublime Text 2/3. No longer maintained."
+  %}
+</div>
+
+
 
