--- a/assets/_sass/_projects.scss
+++ b/assets/_sass/_projects.scss
@@ -103,7 +103,7 @@
 
 .extra-link {
   display: inline-block;
-  margin: 10px 10px;
+  margin: 25px 10px 10px 10px;
   padding: 5px 15px;
   color: $black;
   background-color: transparent;
