Added Biodose Tools to projects

--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -1,12 +1,13 @@
 <div class="user-details">
-  <h2>Other Projects</h2>
+  <h2>Professional Projects</h2>
 </div>
 
+<br>
 
-{% include big-project.html
-  layout =  "right"
-  title =   "The Alf Way to LaTeX"
-  image =   "alf-way-cover.jpg"
-  link =    "https://aldomann.gitlab.io/the-way-to-latex/"
-  content = "A while ago I decided to write my own book about LaTeX. My approach is not academic or technical, just a (I think) simple introduction to LaTeX, what it offers, and how you can use it in clever ways to ease your work (specially in Mathematics and Physics). Some of the best tips and black magic I use daily comes straight from <a href='https://tex.stackexchange.com/'>TeX - LaTeX Stack Exchange</a> (special mentions to the amazing <a href='https://tex.stackexchange.com/users/4427/egreg'>Enrico Gregorio</a>)."
+{% include big-project-narrow.html
+  layout =  "left"
+  title =   "Biodose Tools"
+  image =   "biodose-tools.png"
+  link =    "https://github.com/biodosimetry-uab/biodose-tools/"
+  content = "In the frame of RENEB, we are developing Biodose Tools, an Open Source R Shiny application to help professionals and researchers on Biological Dosimetry to perform several computations and statistical analyses. We also aim to clarify and document the tests used and to propose those considered most appropriate."
 %}
