--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,12 +8,15 @@
       <section id="about">
         {% include about.html %}
       </section>
+      <section id="projects">
+        {% include projects.html %}
+      </section>
       <section id="small-projects">
         {% include r-packages.html %}
         {% include git-repos.html %}
       </section>
       <section id="projects">
-        {% include projects.html %}
+        {% include other-projects.html %}
       </section>
       <section id="small-projects">
         {% include random-stuff.html %}
