Added academic projects

--- a/_includes/git-repos.html
+++ b/_includes/git-repos.html
@@ -1,9 +1,90 @@
 <div class="user-details">
+  <h2>Academic Projects</h2>
+</div>
+
+<div class="small-projects-container">
+  {% include small-project.html
+    title =   "tropical-cyclones-plus"
+    image =   "tropical-cyclones-plus.png"
+    link =    "https://gitlab.com/aldomann/tropical-cyclones-plus"
+    content = "Analyses for my Master's thesis: <i>The influence of sea surface temperature on tropical-cyclone intensity</i>."
+  %}
+
+  {% include small-project.html
+    title =   "optimisation-projects"
+    image =   "optimisation-projects.png"
+    link =    "https://gitlab.com/aldomann/optimisation-projects"
+    content = "Projects for Optimisation course, such as Genetic Algorithms, Heuristics, and Combinatorial Algorithms"
+  %}
+
+    {% include small-project.html
+    title =   "mathematica-university-physics"
+    image =   "mathematica-university-physics.png"
+    link =    "https://gitlab.com/aldomann/mathematica-university-physics"
+    content = "Notebooks I've created and used throughout my Bachelor's degree in Physics."
+  %}
+</div>
+
+<div class="small-projects-container">
+  {% include small-project.html
+    title =   "parallel-and-distributed-systems"
+    image =   "parallel-and-distributed-systems.png"
+    link =    "https://gitlab.com/aldomann/parallel-and-distributed-systems"
+    content = "Scripts and code developed for the Parallel and Distributed Calculation Systems course."
+  %}
+
+  {% include small-project.html
+    title =   "parallel-programming"
+    image =   "parallel-programming.png"
+    link =    "https://gitlab.com/aldomann/parallel-programming"
+    content = "Programs and scripts developed for the Parallel Programming curse."
+  %}
+
+  {% include small-project.html
+    title =   "computational-optics"
+    image =   "computational-optics.png"
+    link =    "https://gitlab.com/aldomann/computational-optics"
+    content = "Scripts developed for Computational Optics course"
+  %}
+</div>
+
+<div class="small-projects-container">
+  {% include small-project.html
+    title =   "open-data-project"
+    image =   "open-data-project.png"
+    link =    "https://gitlab.com/aldomann/open-data-project"
+    content = "Crime Data Hub: An R Shiny app to visualise crime statistics throughout the different regions of the US."
+  %}
+
+  {% include small-project.html
+    title =   "maths-for-bigdata"
+    image =   "maths-for-bigdata.png"
+    link =    "https://gitlab.com/aldomann/maths-for-bigdata"
+    content = "Projects on Statistical Learning, Machine Learning, Topological Data Analysis, and Functional Data Analysis"
+  %}
+
+  {% include small-project.html
+    title =   "trailer-parking"
+    image =   "trailer-parking.png"
+    link =    "https://gitlab.com/aldomann/trailer-parking"
+    content = "Design to model parking a trailer using Control Theory."
+  %}
+</div>
+
+<div class="small-projects-container">
+  {% include small-project.html
+    title =   "neuroscience"
+    image =   "neuroscience.png"
+    link =    "https://gitlab.com/aldomann/neuroscience"
+    content = "Simulations of the dynamics of neuronal ensembles using the model of FREs and QIF neurons."
+  %}
+</div>
+
+<div class="user-details">
   <h2>Miscellaneous Projects</h2>
 </div>
 
 <div class="small-projects-container">
-
   {% include small-project.html
     title =   "apps-scripts"
     image =   "apps-scripts.png"
