--- a/_includes/git-repos.html
+++ b/_includes/git-repos.html
@@ -14,7 +14,7 @@
     title =   "optimisation-projects"
     image =   "optimisation-projects.png"
     link =    "https://gitlab.com/aldomann/optimisation-projects"
-    content = "Projects for Optimisation course, such as Genetic Algorithms, Heuristics, and Combinatorial Algorithms"
+    content = "Projects for my Optimisation course, such as Genetic Algorithms, Heuristics, and Combinatorial Algorithms"
   %}
 
     {% include small-project.html
@@ -30,21 +30,21 @@
     title =   "parallel-and-distributed-systems"
     image =   "parallel-and-distributed-systems.png"
     link =    "https://gitlab.com/aldomann/parallel-and-distributed-systems"
-    content = "Scripts and code developed for the Parallel and Distributed Calculation Systems course."
+    content = "Scripts and code developed for my Parallel and Distributed Calculation Systems course."
   %}
 
   {% include small-project.html
     title =   "parallel-programming"
     image =   "parallel-programming.png"
     link =    "https://gitlab.com/aldomann/parallel-programming"
-    content = "Programs and scripts developed for the Parallel Programming curse."
+    content = "Programs and scripts developed for my Parallel Programming course."
   %}
 
   {% include small-project.html
     title =   "computational-optics"
     image =   "computational-optics.png"
     link =    "https://gitlab.com/aldomann/computational-optics"
-    content = "Scripts developed for Computational Optics course"
+    content = "Scripts developed for my Computational Optics course"
   %}
 </div>
 
