Added badge for small projects

--- a/_includes/small-project.html
+++ b/_includes/small-project.html
@@ -1,6 +1,9 @@
 <div class="small-project">
   <div class="small-images">
     <img alt="{{ include.title }}" src="/assets/img/{{ include.image }}"/>
+    {% if include.badge %}
+    	<div class="small-project-badge">{{ include.badge }}</div>
+    {% endif %}
   </div>
   <div class="small-contents">
     <h4> {{ include.title }} </h4>
