--- a/assets/_sass/_variables.scss
+++ b/assets/_sass/_variables.scss
@@ -15,6 +15,9 @@ $sec:                #4B5664;
 $green:              #009688;
 $cut:                550px;
 
+$wip:                #FCA326;
+$wip-border:         #E5910B;
+
 // Styles
 $text-color:         $black;
 
