--- a/_includes/r-packages.html
+++ b/_includes/r-packages.html
@@ -17,6 +17,24 @@
     content = "R package with useful miscellaneous functions."
   %}
 
+  {% include small-project.html
+    title =   "speedrunr"
+    badge =   "WIP"
+    image =   "speedrunr-hexagon.png"
+    link =    "https://github.com/aldomann/speedrunr"
+    content = "An R implementation of the <a href='https://github.com/speedruncomorg/api'>speedrun.com REST API</a>."
+  %}
+</div>
+
+<div class="small-projects-container">
+  {% include small-project.html
+    title =   "telegramr"
+    badge =   "WIP"
+    image =   "telegramr-hexagon.png"
+    link =    "https://github.com/aldomann/telegramr"
+    content = "R package for processing Telegram Chat History."
+  %}
+
 </div>
 
 
