Added mariokart R package

--- a/_includes/r-packages.html
+++ b/_includes/r-packages.html
@@ -18,15 +18,23 @@
   %}
 
   {% include small-project.html
+    title =   "mariokart"
+    badge =   "WIP"
+    image =   "mariokart-hexagon.png"
+    link =    "https://github.com/aldomann/mariokart"
+    content = "Mario Kart Statistics from Different Games."
+  %}
+</div>
+
+<div class="small-projects-container">
+  {% include small-project.html
     title =   "speedrunr"
     badge =   "WIP"
     image =   "speedrunr-hexagon.png"
     link =    "https://github.com/aldomann/speedrunr"
     content = "An R implementation of the <a href='https://github.com/speedruncomorg/api'>speedrun.com REST API</a>."
   %}
-</div>
 
-<div class="small-projects-container">
   {% include small-project.html
     title =   "telegramr"
     badge =   "WIP"
