Updated GitLab > GitHub links and added encoder package

--- a/_includes/r-packages.html
+++ b/_includes/r-packages.html
@@ -6,14 +6,14 @@
   {% include small-project.html
     title =   "hurdat-hadisst-data"
     image =   "hurdat-hadisst-data-hexagon.png"
-    link =    "https://gitlab.com/aldomann/hurdat-hadisst-data"
+    link =    "https://github.com/aldomann/hurdat-hadisst-data"
     content = "Unified data sets that summarises the relevant variables (for my Master's Thesis) of each analysed tropical-cyclone using data from the HURDAT2 and the HadISST1."
   %}
 
   {% include small-project.html
     title =   "alfR"
     image=    "alfR-hexagon.png"
-    link =    "https://gitlab.com/aldomann/alfR"
+    link =    "https://github.com/aldomann/alfR"
     content = "R package with useful miscellaneous functions."
   %}
 
@@ -26,6 +26,13 @@
 </div>
 
 <div class="small-projects-container">
+  {% include small-project.html
+    title =   "encoder"
+    image =   "encoder-hexagon.png"
+    link =    "https://github.com/kreh-team/encoder"
+    content = "Multiple data encoding methods for R data frames."
+  %}
+
   {% include small-project.html
     title =   "speedrunr"
     badge =   "WIP"
