--- a/_includes/git-repos.html
+++ b/_includes/git-repos.html
@@ -6,21 +6,21 @@
   {% include small-project.html
     title =   "tropical-cyclones-plus"
     image =   "tropical-cyclones-plus.png"
-    link =    "https://gitlab.com/aldomann/tropical-cyclones-plus"
+    link =    "https://github.com/aldomann/tropical-cyclones-plus"
     content = "Analyses for my Master's thesis: <i>The influence of sea surface temperature on tropical-cyclone intensity</i>."
   %}
 
   {% include small-project.html
     title =   "optimisation-projects"
     image =   "optimisation-projects.png"
-    link =    "https://gitlab.com/aldomann/optimisation-projects"
+    link =    "https://github.com/aldomann/optimisation-projects"
     content = "Projects for my Optimisation course, such as Genetic Algorithms, Heuristics, and Combinatorial Algorithms"
   %}
 
     {% include small-project.html
     title =   "mathematica-university-physics"
     image =   "mathematica-university-physics.png"
-    link =    "https://gitlab.com/aldomann/mathematica-university-physics"
+    link =    "https://github.com/aldomann/mathematica-university-physics"
     content = "Notebooks I've created and used throughout my Bachelor's degree in Physics."
   %}
 </div>
@@ -29,21 +29,21 @@
   {% include small-project.html
     title =   "parallel-and-distributed-systems"
     image =   "parallel-and-distributed-systems.png"
-    link =    "https://gitlab.com/aldomann/parallel-and-distributed-systems"
+    link =    "https://github.com/aldomann/parallel-and-distributed-systems"
     content = "Scripts and code developed for my Parallel and Distributed Calculation Systems course."
   %}
 
   {% include small-project.html
     title =   "parallel-programming"
     image =   "parallel-programming.png"
-    link =    "https://gitlab.com/aldomann/parallel-programming"
+    link =    "https://github.com/aldomann/parallel-programming"
     content = "Programs and scripts developed for my Parallel Programming course."
   %}
 
   {% include small-project.html
     title =   "computational-optics"
     image =   "computational-optics.png"
-    link =    "https://gitlab.com/aldomann/computational-optics"
+    link =    "https://github.com/aldomann/computational-optics"
     content = "Scripts developed for my Computational Optics course"
   %}
 </div>
@@ -52,21 +52,21 @@
   {% include small-project.html
     title =   "open-data-project"
     image =   "open-data-project.png"
-    link =    "https://gitlab.com/aldomann/open-data-project"
+    link =    "https://github.com/aldomann/open-data-project"
     content = "Crime Data Hub: An R Shiny app to visualise crime statistics throughout the different regions of the US."
   %}
 
   {% include small-project.html
     title =   "maths-for-bigdata"
     image =   "maths-for-bigdata.png"
-    link =    "https://gitlab.com/aldomann/maths-for-bigdata"
+    link =    "https://github.com/aldomann/maths-for-bigdata"
     content = "Projects on Statistical Learning, Machine Learning, Topological Data Analysis, and Functional Data Analysis"
   %}
 
   {% include small-project.html
     title =   "trailer-parking"
     image =   "trailer-parking.png"
-    link =    "https://gitlab.com/aldomann/trailer-parking"
+    link =    "https://github.com/aldomann/trailer-parking"
     content = "Design to model parking a trailer using Control Theory."
   %}
 </div>
@@ -75,7 +75,7 @@
   {% include small-project.html
     title =   "neuroscience"
     image =   "neuroscience.png"
-    link =    "https://gitlab.com/aldomann/neuroscience"
+    link =    "https://github.com/aldomann/neuroscience"
     content = "Simulations of the dynamics of neuronal ensembles using the model of FREs and QIF neurons."
   %}
 </div>
@@ -88,21 +88,21 @@
   {% include small-project.html
     title =   "apps-scripts"
     image =   "apps-scripts.png"
-    link =    "https://gitlab.com/aldomann/apps-scripts"
+    link =    "https://github.com/aldomann/apps-scripts"
     content = "Post-installation scripts for GNU/Linux systems."
   %}
 
   {% include small-project.html
     title =   "latex-templates"
     image =   "latex-templates.png"
-    link =    "https://gitlab.com/aldomann/latex-templates"
+    link =    "https://github.com/aldomann/latex-templates"
     content = "LaTeX templates and style files for common documents."
   %}
 
   {% include small-project.html
     title =   "telegram-systray-icons"
     image =   "telegram-systray-icons.png"
-    link =    "https://gitlab.com/aldomann/telegram-systray-icons"
+    link =    "https://github.com/aldomann/telegram-systray-icons"
     content = "Custom systray icons for Telegram on GNOME Shell."
   %}
 </div>
@@ -111,20 +111,20 @@
   {% include small-project.html
     title =   "gbcat-keyboard"
     image =   "gbcat-keyboard.png"
-    link =    "https://gitlab.com/aldomann/gbcat-keyboard"
+    link =    "https://github.com/aldomann/gbcat-keyboard"
     content = "Custom X KeyBoard layout for English (UK) + Catalan."
   %}
 
   {% include small-project.html
     title =   "uscat-keyboard"
     image =   "uscat-keyboard.png"
-    link =    "https://gitlab.com/aldomann/uscat-keyboard"
+    link =    "https://github.com/aldomann/uscat-keyboard"
     content = "Custom X KeyBoard layout for English (US) + Catalan."
   %}
 </div>
 
 <div class="user-details">
-  <a class="extra-link" href="https://gitlab.com/users/aldomann/projects">GitLab Repos</a>
+  <!-- <a class="extra-link" href="https://gitlab.com/users/aldomann/projects">GitLab Repos</a> -->
   <a class="extra-link" href="https://github.com/aldomann?tab=repositories">GitHub Repos</a>
 </div>
 
@@ -136,21 +136,21 @@
   {% include small-project.html
     title =   "mockups"
     image =   "mockups.png"
-    link =    "https://gitlab.com/aldomann/mockups"
+    link =    "https://github.com/aldomann/gnome-mockups"
     content = "Application mockups. Mainly redesigns of popular apps following GNOME's Human Interface Guidelines."
   %}
 
   {% include small-project.html
     title =   "moka-extra-icons"
     image =   "moka-extra-icons.png"
-    link =    "https://gitlab.com/aldomann/moka-extra-icons"
+    link =    "https://github.com/aldomann/moka-extra-icons"
     content = "Custom icons for Moka Icon Theme by <a href='https://snwh.org/'>Sam Hewitt</a>."
   %}
 
   {% include small-project.html
     title =   "paper-extra-icons"
     image =   "paper-extra-icons.png"
-    link =    "https://gitlab.com/aldomann/paper-extra-icons"
+    link =    "https://github.com/aldomann/paper-extra-icons"
     content = "Custom icons for Paper Icon Theme by <a href='https://snwh.org/'>Sam Hewitt</a>."
   %}
 </div>
@@ -159,21 +159,21 @@
   {% include small-project.html
     title =   "faba-extra-icons"
     image =   "faba-extra-icons.png"
-    link =    "https://gitlab.com/aldomann/faba-extra-icons"
+    link =    "https://github.com/aldomann/faba-extra-icons"
     content = "Custom icons for Faba Icon Theme by <a href='https://snwh.org/'>Sam Hewitt</a>."
   %}
 
   {% include small-project.html
     title =   "faience-extra-icons"
     image =   "faience-extra-icons.png"
-    link =    "https://gitlab.com/aldomann/faience-extra-icons"
+    link =    "https://github.com/aldomann/faience-extra-icons"
     content = "Custom icons for Faience/Faenza Icon Theme by <a href='http://tiheum.deviantart.com/'>Matthieu James</a>. No longer maintained."
   %}
 
   {% include small-project.html
     title =   "sublime-moka"
     image =   "sublime-moka.png"
-    link =    "https://gitlab.com/aldomann/sublime-moka"
+    link =    "https://github.com/aldomann/sublime-moka"
     content = "Moka theme for Sublime Text 2/3. No longer maintained."
   %}
 </div>
