Added parscanlogreader R package

--- a/_includes/r-packages.html
+++ b/_includes/r-packages.html
@@ -34,11 +34,10 @@
   %}
 
   {% include small-project.html
-    title =   "speedrunr"
-    badge =   "WIP"
-    image =   "speedrunr-hexagon.png"
-    link =    "https://github.com/aldomann/speedrunr"
-    content = "An R implementation of the <a href='https://github.com/speedruncomorg/api'>speedrun.com REST API</a>."
+    title =   "parscanlogreader"
+    image =   "parscanlogreader-hexagon.png"
+    link =    "https://github.com/kreh-team/parscanlogreader"
+    content = "Read Log Files from Scikit-learn's RandomizedSearchCV."
   %}
 
   {% include small-project.html
@@ -49,6 +48,16 @@
     content = "R package for processing Telegram Chat History."
   %}
 
+</div>
+
+<div class="small-projects-container">
+  {% include small-project.html
+    title =   "speedrunr"
+    badge =   "WIP"
+    image =   "speedrunr-hexagon.png"
+    link =    "https://github.com/aldomann/speedrunr"
+    content = "An R implementation of the <a href='https://github.com/speedruncomorg/api'>speedrun.com REST API</a>."
+  %}
 </div>
 
 
